assets/installer/Components/WindowCard/styles.scss
.container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 8px;
  width: 700px;
  height: 600px;
}

.controls {
  display: flex;
  justify-content: flex-end;
}

.content {
  height: 100%;
}

.cardFooter {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.alert {
  width: 100%;
}

.errMessageBox {
  display: flex;
  align-items: center;
}

